fix text align issues and box sizing issues

--- a/src/components/Modals/Onboarding/Onboarding.scss
+++ b/src/components/Modals/Onboarding/Onboarding.scss
@@ -131,6 +131,7 @@ input {
     }
   }
   &-subsection {
+    width: 100%;
     border: 1px solid #c4c4c4;
     box-sizing: border-box;
     border-radius: 9px;
@@ -155,8 +156,7 @@ input {
 
     &--font {
       color: $darkGray2;
-      padding: 5px;
-      margin-left: 10px;
+      flex-direction: row;
       background-color: white;
     }
     &--review {
@@ -220,7 +220,7 @@ input {
     color: $lightPlaceholderGray;
     width: 100%;
     height: 1.75rem;
-
+    padding-left: 8px;
     background-color: white;
     border: 0.5px solid #c4c4c4;
     box-sizing: border-box;
@@ -472,6 +472,7 @@ input {
 
   &-required-star {
     color: $emGreen;
+    display: contents;
   }
 }
 
